--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 <body>
 
-
+    <div class="container">
+        <form>
+            <label for="firstname">First Name: </label>
+            <input type="text" name="firstname" id="firstname" />
+            <label for="lastname">Last Name: </label>
+            <input type="text" name="lastname" id="lastname" />
+            <label for="email">Email: </label>
+            <input type="email" name="email" id="email" />
+            <p>Message: </p>
+            <textarea rows="7" id="comments"></textarea>
+            <input type="submit" value="Submit" id="submit" />
+        </form>
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
