--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 <body>
 
-
+    <div class="container">
+        <h1>Oh hai there! Double click me to change color!</h1>
+        <p>Would you like to read some text? That's probably for the best since this is text and you are presumably reading it. Did you try hovering over the text? Maybe you should.</p>
+        <ul>
+            <li>Try clicking this!</li>
+        </ul>
+        <img src="http://upload.wikimedia.org/wikipedia/commons/0/06/Kitten_in_Rizal_Park,_Manila.jpg" alt="kittens rule" />
+        <input type="button" value="click this" id="colored" />
+        
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
