--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <form>
+        <form id="myForm">
             <label for="firstname">First Name: </label>
             <input type="text" name="firstname" id="firstname" />
             <label for="lastname">Last Name: </label>
